CustomBlocks: fixes, cleanup